--- a/serverless.yml
+++ b/serverless.yml
@@ -150,8 +150,7 @@ resources:
 #       Description: "Description for the output"
 #       Value: "Some output value"
 plugins:
-  -serverless-python-requirements
-
+  - serverless-python-requirements
 custom:
   pythonRequirements:
     dockerizePip: non-linux
